test/corpus/interfaces.txt
================================================================================
Basic interface declarations
================================================================================

interface BasicInterface;
interface EmptyInterface { }

--------------------------------------------------------------------------------

(source_file
  (interface_definition
    (interface_keyword)
    (type_identifier))
  (interface_definition
    (interface_keyword)
    (type_identifier)
    (interface_body)))

================================================================================
Interface with inheritance
================================================================================

interface Derived : BaseInterface { }
interface MultiInherit : Interface1, Interface2 { }

--------------------------------------------------------------------------------

(source_file
  (interface_definition
    (interface_keyword)
    (type_identifier)
    (base_class_clause
      (qualified_type_identifier
        (type_identifier)))
    (interface_body))
  (interface_definition
    (interface_keyword)
    (type_identifier)
    (base_class_clause
      (qualified_type_identifier
        (type_identifier))
      (qualified_type_identifier
        (type_identifier)))
    (interface_body)))

================================================================================
Interface with attributes
================================================================================

shared interface SharedInterface { }
external interface ExternalInterface;
shared external interface SharedExternalInterface { }

--------------------------------------------------------------------------------

(source_file
  (interface_definition
    (shared_keyword)
    (interface_keyword)
    (type_identifier)
    (interface_body))
  (interface_definition
    (external_keyword)
    (interface_keyword)
    (type_identifier))
  (interface_definition
    (shared_keyword)
    (external_keyword)
    (interface_keyword)
    (type_identifier)
    (interface_body)))

================================================================================
Interface with methods
================================================================================

interface CompleteInterface {
    void method();
    int getValue() const;
    float& getReference();
}

--------------------------------------------------------------------------------

(source_file
  (interface_definition
    (interface_keyword)
    (type_identifier)
    (interface_body
      (interface_method
        (type_descriptor
          (primitive_type
            (void_keyword)))
        (identifier)
        (parameter_list))
      (interface_method
        (type_descriptor
          (primitive_type
            (int_keyword)))
        (identifier)
        (parameter_list)
        (const_keyword))
      (interface_method
        (type_descriptor
          (primitive_type
            (float_keyword)))
        (reference_operator)
        (identifier)
        (parameter_list)))))
